po 4 pamokos. pakeitimai

--- a/Track_and_trace.ipynb
+++ b/Track_and_trace.ipynb
@@ -200,6 +200,40 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class batch_data():\n",
+    "        def __init__(self, batch, expire, name):\n",
+    "            self.batch=input('Enter product batch number: ')\n",
+    "            if 7>len(batch)>7:\n",
+    "                print('Please enter batch number of 8 numbers')\n",
+    "            self.expire=input('Enter product expire date: ')\n",
+    "            sefl.product_name=input('Enter product name: ')\n",
+    "        def __repr__(self, name, batch, expoire):\n",
+    "            return '{}{}{}'.format(name, batch, expire)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
